force-app/main/default/objects/Existing_Patient_Call__c/Existing_Patient_Call__c.object-meta.xml
<CustomObject>
    <description>Patient Status at the time of the call</description>
    <label>Existing Patient Call</label>
    <nameField>
        <displayFormat>EPC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Existing Patient Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>