force-app/main/default/objects/Existing_Patient_Call__c/fields/Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Id__c</fullName>
    <externalId>true</externalId>
    <label>Interaction Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>