force-app/main/default/objects/Existing_Patient_Call__c/fields/Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Status__c</fullName>
    <label>Patient Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>