force-app/main/default/objects/Existing_Patient_Call__c/fields/Vonage_Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Call_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vonage Call Summary</label>
    <referenceTo>NVMStatsSF__NVM_Call_Summary__c</referenceTo>
    <relationshipLabel>Existing Patient</relationshipLabel>
    <relationshipName>Existing_Patient</relationshipName>
    <type>Lookup</type>
</CustomField>