force-app/main/default/objects/Existing_Patient_Call__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interaction_Id__c</columns>
    <columns>Patient_Status__c</columns>
    <columns>Vonage_Call_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>